# bzlmodRio-allwpilib

./: MODULE.bazel  maven_cpp_deps.bzl
.github/workflows/: build.yml
dependencies/: maven_cpp_deps.bzl
dependencies/cpp/cameraserver/: BUILD.bazel
dependencies/cpp/cscore/: BUILD.bazel
dependencies/cpp/hal/: BUILD.bazel
dependencies/cpp/halsim_ds_socket/: BUILD.bazel
dependencies/cpp/halsim_gui/: BUILD.bazel
dependencies/cpp/halsim_ws_client/: BUILD.bazel
dependencies/cpp/halsim_ws_server/: BUILD.bazel
dependencies/cpp/ntcore/: BUILD.bazel
dependencies/cpp/wpilibNewCommands/: BUILD.bazel
dependencies/cpp/wpilibOldCommands/: BUILD.bazel
dependencies/cpp/wpilibc/: BUILD.bazel
dependencies/cpp/wpimath/: BUILD.bazel
dependencies/cpp/wpinet/: BUILD.bazel
dependencies/cpp/wpiutil/: BUILD.bazel
dependencies/java/cameraserver/: BUILD.bazel
dependencies/java/cscore/: BUILD.bazel
dependencies/java/hal/: BUILD.bazel
dependencies/java/ntcore/: BUILD.bazel
dependencies/java/wpilibNewCommands/: BUILD.bazel
dependencies/java/wpilibOldCommands/: BUILD.bazel
dependencies/java/wpilibj/: BUILD.bazel
dependencies/java/wpimath/: BUILD.bazel
dependencies/java/wpinet/: BUILD.bazel
dependencies/java/wpiutil/: BUILD.bazel
dependencies/tools/: executable_launcher.sh  tool_launchers.bzl
dependencies/tools/Glass/: BUILD
dependencies/tools/OutlineViewer/: BUILD
dependencies/tools/RobotBuilder/: BUILD
dependencies/tools/SmartDashboard/: BUILD
dependencies/tools/glass/: BUILD
dependencies/tools/pathweaver/: BUILD
dependencies/tools/robotbuilder/: BUILD
dependencies/tools/shuffleboard/: BUILD
dependencies/tools/smartdashboard/: BUILD
generate/: generate_allwpilib.py  get_allwpilib_dependencies.py  module_config.json.jinja2  publish_allwpilib.py
tests/: .bazelrc  BUILD.bazel  MODULE.bazel
tests/cpp/cameraserver/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/cscore/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/hal/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/halsim_ds_socket/: BUILD.bazel
tests/cpp/halsim_gui/: BUILD.bazel
tests/cpp/halsim_ws_client/: BUILD.bazel
tests/cpp/halsim_ws_server/: BUILD.bazel  main.cpp
tests/cpp/ntcore/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/wpilibNewCommands/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/wpilibOldCommands/: BUILD.bazel  test.cpp
tests/cpp/wpilibc/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/wpimath/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/wpinet/: BUILD.bazel  main.cpp
tests/cpp/wpiutil/: BUILD.bazel  test.cpp
tests/java/cameraserver/: BUILD.bazel  BasicTest.java  Main.java  main.java
tests/java/cscore/: BUILD.bazel  BasicTest.java  Main.java
tests/java/hal/: BUILD.bazel  BasicTest.java  Main.java  main.java
tests/java/ntcore/: BUILD.bazel  BasicTest.java  Main.java
tests/java/wpilibNewCommands/: BUILD.bazel  BasicTest.java  Main.java  main.java
tests/java/wpilibOldCommands/: BUILD.bazel  BasicTest.java  Main.java
tests/java/wpilibj/: BUILD.bazel  BasicTest.java  Main.java
tests/java/wpimath/: BUILD.bazel  BasicTest.java  Main.java  main.java
tests/java/wpinet/: BUILD.bazel  main.java
tests/java/wpiutil/: BUILD.bazel  BasicTest.java
