
module(
    name = "allwpilib",
    version = "2021.1.2",
    compatibility_level = 2021,
)

bazel_dep(name = "bazel_skylib", version = "1.1.1")
bazel_dep(name = "platforms", version = "0.0.4")
bazel_dep(name = "rules_cc", version = "0.0.2")
bazel_dep(name = "rules_java", version = "5.1.0")
bazel_dep(name = "rules_python", version = "0.12.0")
bazel_dep(name = "rules_jvm_external", version = "4.4.2")

bazel_dep(name = "rules_bazelrio", version = "0.0.2")
bazel_dep(name = "wpi-opencv", version = "3.4.7-4")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.fasterxml.jackson.core:jackson-annotations:2.12.4",
        "com.fasterxml.jackson.core:jackson-core:2.12.4",
        "com.fasterxml.jackson.core:jackson-databind:2.12.4",
        "edu.wpi.first.cameraserver:cameraserver-java:2021.1.2",
        "edu.wpi.first.cscore:cscore-java:2021.1.2",
        "edu.wpi.first.hal:hal-java:2021.1.2",
        "edu.wpi.first.ntcore:ntcore-java:2021.1.2",
        "edu.wpi.first.wpilibNewCommands:wpilibNewCommands-java:2021.1.2",
        "edu.wpi.first.wpilibOldCommands:wpilibOldCommands-java:2021.1.2",
        "edu.wpi.first.wpilibj:wpilibj-java:2021.1.2",
        "edu.wpi.first.wpimath:wpimath-java:2021.1.2",
        "edu.wpi.first.wpiutil:wpiutil-java:2021.1.2",
        "org.ejml:ejml-simple:0.41",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://frcmaven.wpi.edu/release",
    ]
)

use_repo(
    maven,
    "maven",
)


setup_allwpilib_dependencies = use_extension("//:maven_cpp_deps.bzl", "setup_allwpilib_dependencies")
use_repo(
    setup_allwpilib_dependencies,
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_headers",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxathena",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxathenastatic",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_windowsx86-64",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_osxx86-64",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_windowsx86-64static",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_osxx86-64static",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_headers",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxathena",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxathenastatic",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_windowsx86-64",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_osxx86-64",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_windowsx86-64static",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_osxx86-64static",
    "bazelrio_edu_wpi_first_hal_hal-cpp_headers",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxathena",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxathenastatic",
    "bazelrio_edu_wpi_first_hal_hal-cpp_windowsx86-64",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_hal_hal-cpp_osxx86-64",
    "bazelrio_edu_wpi_first_hal_hal-cpp_windowsx86-64static",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_hal_hal-cpp_osxx86-64static",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_headers",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxathena",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxathenastatic",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_windowsx86-64",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_osxx86-64",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_windowsx86-64static",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_osxx86-64static",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_headers",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxathena",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxathenastatic",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_windowsx86-64",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_osxx86-64",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_windowsx86-64static",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_osxx86-64static",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_headers",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxathena",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxathenastatic",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_windowsx86-64",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_osxx86-64",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_windowsx86-64static",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_osxx86-64static",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_headers",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxathena",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxathenastatic",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_windowsx86-64",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_osxx86-64",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_windowsx86-64static",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_osxx86-64static",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_headers",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxathena",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxathenastatic",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_windowsx86-64",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_osxx86-64",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_windowsx86-64static",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_osxx86-64static",
    "bazelrio_edu_wpi_first_wpiliboldcommands_wpiliboldcommands-cpp_headers",
    "bazelrio_edu_wpi_first_wpiliboldcommands_wpiliboldcommands-cpp_linuxathena",
    "bazelrio_edu_wpi_first_wpiliboldcommands_wpiliboldcommands-cpp_linuxathenastatic",
    "bazelrio_edu_wpi_first_wpiliboldcommands_wpiliboldcommands-cpp_windowsx86-64",
    "bazelrio_edu_wpi_first_wpiliboldcommands_wpiliboldcommands-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_wpiliboldcommands_wpiliboldcommands-cpp_osxx86-64",
    "bazelrio_edu_wpi_first_wpiliboldcommands_wpiliboldcommands-cpp_windowsx86-64static",
    "bazelrio_edu_wpi_first_wpiliboldcommands_wpiliboldcommands-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_wpiliboldcommands_wpiliboldcommands-cpp_osxx86-64static",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_windowsx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_linuxx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_osxx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_windowsx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_linuxx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_osxx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_windowsx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_linuxx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_osxx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_windowsx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_linuxx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_osxx86-64",
    "bazelrio_edu_wpi_first_tools_smartdashboard_linux64",
    "bazelrio_edu_wpi_first_tools_smartdashboard_mac64",
    "bazelrio_edu_wpi_first_tools_smartdashboard_win64",
    "bazelrio_edu_wpi_first_tools_pathweaver_linux64",
    "bazelrio_edu_wpi_first_tools_pathweaver_mac64",
    "bazelrio_edu_wpi_first_tools_pathweaver_win64",
    "bazelrio_edu_wpi_first_tools_robotbuilder",
    "bazelrio_edu_wpi_first_shuffleboard_shuffleboard_linux64",
    "bazelrio_edu_wpi_first_shuffleboard_shuffleboard_mac64",
    "bazelrio_edu_wpi_first_shuffleboard_shuffleboard_win64",
    "bazelrio_edu_wpi_first_tools_outlineviewer_linux64",
    "bazelrio_edu_wpi_first_tools_outlineviewer_mac64",
    "bazelrio_edu_wpi_first_tools_outlineviewer_win64",
    "bazelrio_edu_wpi_first_tools_glass_windowsx86-64",
    "bazelrio_edu_wpi_first_tools_glass_linuxx86-64",
    "bazelrio_edu_wpi_first_tools_glass_osxx86-64",
)