cc_library(
    name = "cameraserver",
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = [
        "@allwpilib//dependencies/cpp/wpiutil",
        "@allwpilib//dependencies/cpp/cscore",
        "@allwpilib//dependencies/cpp/ntcore",
        "@allwpilib//dependencies/cpp/wpinet",
        "@opencv-cpp//:opencv",
    ] + ["@bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_headers//:headers"] + select({
        "@bazel_tools//src/conditions:windows": ["@bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_windowsx86-64//:shared_libs"],
        "@bazel_tools//src/conditions:linux_x86_64": ["@bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxx86-64//:shared_libs"],
        "@bazel_tools//src/conditions:darwin": ["@bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_osxx86-64//:shared_libs"],
        # "//constraints/is_roborio:roborio": ["@bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxathena//:shared_libs"],
    }),
)
