cc_library(
    name = "halsim_ds_socket",
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = [
        "@allwpilib//dependencies/cpp/hal",
        "@allwpilib//dependencies/cpp/wpiutil",
        "@allwpilib//dependencies/cpp/wpinet",
    ] + select({
        "@bazel_tools//src/conditions:windows": ["@bazelrio_edu_wpi_first_halsim_halsim_ds_socket_windowsx86-64//:shared_libs"],
        "@bazel_tools//src/conditions:linux_x86_64": ["@halsim_ds_socket-linuxx86-64//:shared_libs"],
        "@bazel_tools//src/conditions:darwin": ["@halsim_ds_socket-osxx86-64//:shared_libs"],
        # "//constraints/is_roborio:roborio": ["@halsim_ds_socket-linuxathena//:shared_libs"],
    }),
)
