cc_library(
    name = "halsim_ws_client",
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = [
        "@allwpilib//dependencies/cpp/hal",
        "@allwpilib//dependencies/cpp/wpiutil",
        "@allwpilib//dependencies/cpp/wpinet",
    ] + select({
        "@bazel_tools//src/conditions:windows": ["@bazelrio_edu_wpi_first_halsim_halsim_ws_client_windowsx86-64//:shared_libs"],
        "@bazel_tools//src/conditions:linux_x86_64": ["@halsim_ws_client-linuxx86-64//:shared_libs"],
        "@bazel_tools//src/conditions:darwin": ["@halsim_ws_client-osxx86-64//:shared_libs"],
        # "//constraints/is_roborio:roborio": ["@halsim_ws_client-linuxathena//:shared_libs"],
    }),
)
