cc_library(
    name = "wpilibNewCommands",
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = ["@allwpilib//dependencies/cpp/wpiutil", "@allwpilib//dependencies/cpp/wpimath", "@allwpilib//dependencies/cpp/wpinet", "@allwpilib//dependencies/cpp/cscore", "@allwpilib//dependencies/cpp/ntcore", "@allwpilib//dependencies/cpp/hal", "@allwpilib//dependencies/cpp/cameraserver", "@opencv-cpp//:opencv", "@allwpilib//dependencies/cpp/wpilibc"] + ["@bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_headers//:headers"] + select({
        "@bazel_tools//src/conditions:windows": ["@bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_windowsx86-64//:shared_libs"],
        "@bazel_tools//src/conditions:linux_x86_64": ["@wpilibnewcommands-cpp-linuxx86-64//:shared_libs"],
        "@bazel_tools//src/conditions:darwin": ["@wpilibnewcommands-cpp-osxx86-64//:shared_libs"],
        # "//constraints/is_roborio:roborio": ["@wpilibnewcommands-cpp-linuxathena//:shared_libs"],
    }),
)
