cc_library(
    name = "wpilibOldCommands",
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = [
        "@allwpilib//dependencies/cpp/wpiutil",
        "@allwpilib//dependencies/cpp/wpimath",
        "@allwpilib//dependencies/cpp/cscore",
        "@allwpilib//dependencies/cpp/ntcore",
        "@allwpilib//dependencies/cpp/hal",
        "@allwpilib//dependencies/cpp/cameraserver",
        "@wpi-opencv//dependencies/cpp/opencv",
        "@allwpilib//dependencies/cpp/wpilibc",
    ] + ["@bazelrio_edu_wpi_first_wpiliboldcommands_wpiliboldcommands-cpp_headers//:headers"] + select({
        "@bazel_tools//src/conditions:windows": ["@bazelrio_edu_wpi_first_wpiliboldcommands_wpiliboldcommands-cpp_windowsx86-64//:shared_libs"],
        "@bazel_tools//src/conditions:linux_x86_64": ["@bazelrio_edu_wpi_first_wpiliboldcommands_wpiliboldcommands-cpp_linuxx86-64//:shared_libs"],
        "@bazel_tools//src/conditions:darwin": ["@bazelrio_edu_wpi_first_wpiliboldcommands_wpiliboldcommands-cpp_osxx86-64//:shared_libs"],
        # "//constraints/is_roborio:roborio": ["@bazelrio_edu_wpi_first_wpiliboldcommands_wpiliboldcommands-cpp_linuxathena//:shared_libs"],
    }),
)
