cc_library(
    name = "wpilibc",
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = [
        "@allwpilib//dependencies/cpp/wpiutil",
        "@allwpilib//dependencies/cpp/wpimath",
        "@allwpilib//dependencies/cpp/wpinet",
        "@allwpilib//dependencies/cpp/cscore",
        "@allwpilib//dependencies/cpp/ntcore",
        "@allwpilib//dependencies/cpp/hal",
        "@allwpilib//dependencies/cpp/cameraserver",
        "@opencv-cpp//:opencv",
    ] + ["@bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_headers//:headers"] + select({
        "@bazel_tools//src/conditions:windows": ["@bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_windowsx86-64//:shared_libs"],
        "@bazel_tools//src/conditions:linux_x86_64": ["@bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxx86-64//:shared_libs"],
        "@bazel_tools//src/conditions:darwin": ["@bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_osxx86-64//:shared_libs"],
        # "//constraints/is_roborio:roborio": ["@bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxathena//:shared_libs"],
    }),
)
