cc_library(
    name = "wpimath",
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = [
        "@allwpilib//dependencies/cpp/wpiutil",
    ] + ["@bazelrio_edu_wpi_first_wpimath_wpimath-cpp_headers//:headers"] + select({
        "@bazel_tools//src/conditions:windows": ["@bazelrio_edu_wpi_first_wpimath_wpimath-cpp_windowsx86-64//:shared_libs"],
        "@bazel_tools//src/conditions:linux_x86_64": ["@bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxx86-64//:shared_libs"],
        "@bazel_tools//src/conditions:darwin": ["@bazelrio_edu_wpi_first_wpimath_wpimath-cpp_osxx86-64//:shared_libs"],
        # "//constraints/is_roborio:roborio": ["@bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxathena//:shared_libs"],
    }),
)

cc_library(
    name = "jni",
    visibility = ["//visibility:public"],
    deps = [
        ":wpimath",
    ] + select({
        "@bazel_tools//src/conditions:windows": ["@bazelrio_edu_wpi_first_wpimath_wpimath-cpp_windowsx86-64//:shared_jni_libs"],
        "@bazel_tools//src/conditions:linux_x86_64": ["@bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxx86-64//:shared_jni_libs"],
        "@bazel_tools//src/conditions:darwin": ["@bazelrio_edu_wpi_first_wpimath_wpimath-cpp_osxx86-64//:shared_jni_libs"],
        # "//constraints/is_roborio:roborio": ["@bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxathena//:shared_jni_libs"],
    }),
)
