cc_library(
    name = "wpinet",
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = ["@allwpilib//dependencies/cpp/wpiutil"] + ["@bazelrio_edu_wpi_first_wpinet_wpinet-cpp_headers//:headers"] + select({
        "@bazel_tools//src/conditions:windows": ["@bazelrio_edu_wpi_first_wpinet_wpinet-cpp_windowsx86-64//:shared_libs"],
        "@bazel_tools//src/conditions:linux_x86_64": ["@wpinet-cpp-linuxx86-64//:shared_libs"],
        "@bazel_tools//src/conditions:darwin": ["@wpinet-cpp-osxx86-64//:shared_libs"],
        # "//constraints/is_roborio:roborio": ["@wpinet-cpp-linuxathena//:shared_libs"],
    }),
)

cc_library(
    name = "jni",
    visibility = ["//visibility:public"],
    deps = [
        ":wpinet",
    ] + select({
        "@bazel_tools//src/conditions:windows": ["@bazelrio_edu_wpi_first_wpinet_wpinet-cpp_windowsx86-64//:shared_jni_libs"],
        "@bazel_tools//src/conditions:linux_x86_64": ["@wpinet-cpp-linuxx86-64//:shared_jni_libs"],
        "@bazel_tools//src/conditions:darwin": ["@wpinet-cpp-osxx86-64//:shared_jni_libs"],
        #"//constraints/is_roborio:roborio": ["@wpinet-cpp-linuxathena//:shared_jni_libs"],
    }),
)
