cc_library(
    name = "wpiutil",
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = [
    ] + ["@bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_headers//:headers"] + select({
        "@bazel_tools//src/conditions:windows": ["@bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_windowsx86-64//:shared_libs"],
        "@bazel_tools//src/conditions:linux_x86_64": ["@wpiutil-cpp-linuxx86-64//:shared_libs"],
        "@bazel_tools//src/conditions:darwin": ["@wpiutil-cpp-osxx86-64//:shared_libs"],
        # "//constraints/is_roborio:roborio": ["@wpiutil-cpp-linuxathena//:shared_libs"],
    }),
)

cc_library(
    name = "jni",
    visibility = ["//visibility:public"],
    deps = [
        ":wpiutil",
    ] + select({
        "@bazel_tools//src/conditions:windows": ["@bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_windowsx86-64//:shared_jni_libs"],
        "@bazel_tools//src/conditions:linux_x86_64": ["@wpiutil-cpp-linuxx86-64//:shared_jni_libs"],
        "@bazel_tools//src/conditions:darwin": ["@wpiutil-cpp-osxx86-64//:shared_jni_libs"],
        #"//constraints/is_roborio:roborio": ["@wpiutil-cpp-linuxathena//:shared_jni_libs"],
    }),
)
