load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "cameraserver",
    visibility = ["//visibility:public"],
    exports = [
        artifact("edu.wpi.first.cameraserver:cameraserver-java"),
        "@allwpilib//dependencies/cpp/cscore:jni",
        "@allwpilib//dependencies/cpp/ntcore:jni",
        "@allwpilib//dependencies/cpp/wpiutil:jni",
        "@allwpilib//dependencies/java/cscore",
        "@allwpilib//dependencies/java/ntcore",
        "@allwpilib//dependencies/java/wpiutil",
        "@wpi-opencv//dependencies/cpp/opencv:jni",
    ],
)
