load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "cscore",
    visibility = ["//visibility:public"],
    exports = [
        artifact("edu.wpi.first.cscore:cscore-java"),
        "@allwpilib//dependencies/cpp/cscore:jni",
        "@allwpilib//dependencies/cpp/wpinet:jni",
        "@allwpilib//dependencies/cpp/wpiutil:jni",
        "@allwpilib//dependencies/java/wpinet",
        "@allwpilib//dependencies/java/wpiutil",
        "@opencv-cpp//:jni",
        "@opencv-java//:opencv",
    ],
)
