load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "hal",
    visibility = ["//visibility:public"],
    exports = [
        artifact("edu.wpi.first.hal:hal-java"),
        "@allwpilib//dependencies/cpp/hal:jni",
        "@allwpilib//dependencies/cpp/wpiutil:jni",
        "@allwpilib//dependencies/java/wpiutil",
    ],
)
