load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "ntcore",
    visibility = ["//visibility:public"],
    exports = [
        artifact("edu.wpi.first.ntcore:ntcore-java"),
        "@allwpilib//dependencies/cpp/ntcore:jni",
        "@allwpilib//dependencies/cpp/wpiutil:jni",
        "@allwpilib//dependencies/java/wpiutil",
    ],
)
