load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "wpimath",
    visibility = ["//visibility:public"],
    exports = [
        artifact("edu.wpi.first.wpimath:wpimath-java"),
        "@allwpilib//dependencies/cpp/wpimath:jni",
        "@allwpilib//dependencies/cpp/wpiutil:jni",
        "@allwpilib//dependencies/java/wpiutil",
        artifact("org.ejml:ejml-simple"),
    ],
)
