load("@rules_jvm_external//:defs.bzl", "artifact")


java_library(
    name = "wpiutil",
    visibility = ["//visibility:public"],
    exports = [
        artifact("edu.wpi.first.wpiutil:wpiutil-java"),
        "@allwpilib//dependencies/cpp/wpiutil:jni",
        artifact("com.fasterxml.jackson.core:jackson-annotations"),
        artifact("com.fasterxml.jackson.core:jackson-core"),
        artifact("com.fasterxml.jackson.core:jackson-databind"),
    ],
)
