cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    # deps = ["@com_github_google_glog//:glog"],
    deps = ["@allwpilib//dependencies/cpp/cscore"],
)

cc_test(
    name = "test",
    srcs = ["test.cpp"],
    deps = [
        "@allwpilib//dependencies/cpp/cscore",
        "@googletest//:gtest_main",
    ],
)
