cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    # deps = ["@com_github_google_glog//:glog"],
    deps = ["@allwpilib//dependencies/cpp/hal"],
)

cc_test(
    name = "test",
    srcs = ["test.cpp"],
    deps = [
        "@allwpilib//dependencies/cpp/hal",
        "@googletest//:gtest_main",
    ],
)
