cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    # deps = ["@com_github_google_glog//:glog"],
    deps = ["@allwpilib//dependencies/cpp/wpilibNewCommands"],
)

cc_test(
    name = "test",
    srcs = ["test.cpp"],
    deps = [
        "@allwpilib//dependencies/cpp/wpilibNewCommands",
        "@googletest//:gtest_main",
    ],
)
